# test1

./: .gitignore  README.md  api_design.md
backend/: manage.py  pyproject.toml  requirements.txt
backend/apps/ai/: models.py  serializers.py  urls.py  views.py
backend/apps/auth_app/: models.py  serializers.py  urls.py  views.py
backend/apps/auth_app/migrations/: 0001_initial.py
backend/apps/game/: models.py  serializers.py  urls.py  views.py
backend/project/: settings.py  urls.py  wsgi.py
backend/utils/: exception_handler.py
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.ts
frontend/src/config/: 游戏配置.ts
frontend/src/scenes/: 主菜单场景.ts  任务场景.ts  启动场景.ts  对话场景.ts  游戏场景.ts  登录场景.ts  背包场景.ts
frontend/src/services/: api服务.ts
